# nlp-representation-learning

./: .gitignore  01-intro.ipynb  02-apprentissage-en-contexte.ipynb  02-in-context-learning.ipynb  03-encoder-tuning.ipynb  04-decoder-tuning.ipynb  05-conclusion.ipynb  README.md  myst.yml  pyproject.toml
data/: nli_fr_test.tsv  nli_fr_train.tsv
pages/: 01-intro.ipynb  02-in-context-learning.ipynb  03-encoder-tuning.ipynb  04-decoder-tuning.ipynb  05-conclusion.ipynb
src/: 01-intro.ipynb  02-apprentissage-en-contexte.ipynb  Llama-1B-LoRA.ipynb  Llama3-1b-lora.ipynb  camembert-a-lora.ipynb  rapport_llama_lora.ipynb
