[project]
name = "nlp-representation-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "polars>=1.36.1",
    "transformers>=4.57.3",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
